syntax = "proto3";

package test.extensions.filters.http.geoip;

message DummyProvider {
}
